--- a/ibatis2sdmap/src/ibatis2sdmap/project.json
+++ b/ibatis2sdmap/src/ibatis2sdmap/project.json
@@ -9,8 +9,10 @@
       "type": "platform",
       "version": "1.0.1"
     },
-    "System.Reactive": "3.1.1", 
-    "Microsoft.Extensions.Configuration.Json": "1.1.0"
+    "System.Reactive": "3.1.1",
+    "Microsoft.Extensions.Configuration.Json": "1.1.0",
+    "System.Xml.XDocument": "4.3.0", 
+    "System.Xml.XmlDocument": "4.3.0"
   },
 
   "frameworks": {
