--- a/ibatis2sdmap/src/ibatis2sdmap/appconfig.json
+++ b/ibatis2sdmap/src/ibatis2sdmap/appconfig.json
@@ -1,4 +1,4 @@
 ﻿{
-  "IBatisXmlDirectory": "C:\\_\\job-git\\Moon\\M2.Repository.DefaultImplementation\\SqlMaps",
+  "IBatisXmlDirectory": "C:\\_\\job2\\sdmap\\M2.Repository.DefaultImplementation\\SqlMaps",
   "DestinationDirectory": "Destination"
 }
