--- a/ibatis2sdmap/src/ibatis2sdmap/project.json
+++ b/ibatis2sdmap/src/ibatis2sdmap/project.json
@@ -11,7 +11,8 @@
     },
     "System.Reactive": "3.1.1",
     "Microsoft.Extensions.Configuration.Json": "1.1.0",
-    "System.Xml.XDocument": "4.3.0"
+    "System.Xml.XDocument": "4.3.0",
+    "sdmap": "0.9.1"
   },
 
   "frameworks": {
