--- a/ibatis2sdmap/src/ibatis2sdmap/ibatis2sdmap.csproj
+++ b/ibatis2sdmap/src/ibatis2sdmap/ibatis2sdmap.csproj
@@ -3,13 +3,18 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp1.0;net451</TargetFrameworks>
     <AssemblyName>ibatis2sdmap</AssemblyName>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <PackageId>ibatis2sdmap</PackageId>
     <RuntimeFrameworkVersion>1.0.4</RuntimeFrameworkVersion>
     <PackageTargetFallback>$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
     <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
     <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
     <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <ApplicationIcon />
+    <StartupObject />
+    <Authors>sdcb</Authors>
+    <PackageProjectUrl>https://github.com/sdcb/ibatis2sdmap</PackageProjectUrl>
+    <Description>Convert ibatis xml to sdmap grammar.</Description>
   </PropertyGroup>
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.0' ">
